--- a/.github/workflows/qualitycheck.yaml
+++ b/.github/workflows/qualitycheck.yaml
@@ -15,9 +15,9 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-      - name: Analysing code with pylint
+      - name: Analysing code with flake8
         run: |
-          pylint `ls -R|grep .py$|xargs`
+          flake8
       - name: Running tests with pytest
         run: |
           pytest
