--- a/.github/workflows/CI_Dev.yml
+++ b/.github/workflows/CI_Dev.yml
@@ -30,5 +30,5 @@ jobs:
         
     - name: Begin Pytest
       run: |
-        mv ./tests/*.* ./
+        mv ./test_cases/*.* ./
         coverage run -m pytest
