fix: remove duplicate workflow task

--- a/.github/workflows/CI_QA.yml
+++ b/.github/workflows/CI_QA.yml
@@ -32,14 +32,8 @@ jobs:
       - name: Begin Pytest
         run: python -m pytest --junit-xml=report.xml
 
-      - name: "Publish Unit Tests Results"
+      - name: "Publish Test Report"
         uses: EnricoMi/publish-unit-test-result-action@v1.25
-        if: always()
-        with:
-          files: report.xml
-
-      - name: Publish Unit Test Results
-        uses: EnricoMi/publish-unit-test-result-action@v1.24
         if: always()
         with:
           files: report.xml
