--- a/.github/workflows/CI_QA.yml
+++ b/.github/workflows/CI_QA.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Begin Pytest
         run: python -m pytest --junit-xml=report.xml
 
-      - name: "Publish Test Report"
+      - name: Publish Test Report
         uses: EnricoMi/publish-unit-test-result-action@v1.25
         if: always()
         with:
