--- a/.github/workflows/Label_PR.yml
+++ b/.github/workflows/Label_PR.yml
@@ -7,3 +7,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: JulienKode/team-labeler-action@v0.1.0
+        with:
+          repo-token: "${{ secrets.GITHUB_TOKEN }}"
