--- a/.github/workflows/CI_QA.yml
+++ b/.github/workflows/CI_QA.yml
@@ -26,6 +26,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           repository: np-devops-team1/DevOps_QA
+          path: tests
           token: ${{ secrets.QA_REMOTE }}
 
       - name: Begin Pytest
