--- a/.github/workflows/CI_QA.yml
+++ b/.github/workflows/CI_QA.yml
@@ -82,7 +82,7 @@ jobs:
           echo "Failed: ${failed}"
           echo "Error: ${error}"
           echo "Passed: ${passed}"
-          echo "Executed: "${executed}"
+          echo "Executed: ${executed}"
           
       - name: Send to SeriesCI
         run: |
