--- a/.github/workflows/CI_Dev.yml
+++ b/.github/workflows/CI_Dev.yml
@@ -75,3 +75,21 @@ jobs:
       uses: coroo/pytest-coverage-commentator@v1.0.2
       with:
         pytest-coverage: pytest-coverage.txt
+
+  build3:
+    runs-on: ubuntu-latest
+    steps:
+    condition: eq(${{env.TAG}}, "ci")
+    - uses: actions/setup-python@v2
+      with:
+        python-version: 3.8
+        
+    - name: Install Libraries
+      run: |
+        pip install flake8 pytest pytest-cov coverage pytest-mock
+      
+    - name: Checkout Own Repo
+      uses: actions/checkout@v2
+      with: 
+        repository: np-devops-team1/DevOps_Main
+        
