--- a/.github/workflows/CI_Dev.yml
+++ b/.github/workflows/CI_Dev.yml
@@ -42,7 +42,7 @@ jobs:
       run: |
         flake8
   
-  - build2:
+  - build:
     runs-on: ubuntu-latest
     steps:
     condition: eq(${{env.TAG}}, "feat")
@@ -76,7 +76,7 @@ jobs:
       with:
         pytest-coverage: pytest-coverage.txt
 
-  - build3:
+  - build:
     runs-on: ubuntu-latest
     steps:
     condition: eq(${{env.TAG}}, "ci")
