--- a/.github/workflows/CI_Dev.yml
+++ b/.github/workflows/CI_Dev.yml
@@ -43,21 +43,21 @@ jobs:
         flake8
         
     - name: Checkout Test Script
+      if: ${{ env.TAG == "feat" }}
       uses: actions/checkout@v2
-      if: $ {{tag == "feat"}}
       with:
         repository: np-devops-team1/DevOps_Dev_UnitTest
         path: test_cases
         token: ${{ secrets.DEV_REMOTE }}
         
     - name: Build coverage file
-      if: $ {{tag == "feat"}}
+      if: ${{ env.TAG == "feat" }}
       run: |
         mv ./test_cases/test_${{env.NAME}} ./
         pytest --cache-clear --cov=app test/ > pytest-coverage.txt
         
     - name: Comment coverage
-      if: $ {{tag == "feat"}}
+      if: ${{ env.TAG == "feat" }}
       uses: coroo/pytest-coverage-commentator@v1.0.2
       with:
         pytest-coverage: pytest-coverage.txt
