--- a/.github/workflows/CI_Dev.yml
+++ b/.github/workflows/CI_Dev.yml
@@ -39,10 +39,10 @@ jobs:
         echo "TAG_BRANCH=$tag_branch" >> $GITHUB_ENV
         echo "NAME_BRANCH=$name_branch" >> $GITHUB_ENV
         
-        echo $${{tag_branch}}
-        echo $${{name_branch}}
-        echo $${{env.TAG_BRANCH}}
-        echo $${{env.NAME_BRANCH}}
+        echo "$tag_branch"
+        echo "$name_branch"
+        echo "$env.TAG_BRANCH"
+        echo "$env.NAME_BRANCH"
 
     - name: Analysing code with flake8
       run: |
