ci: added echo tag and branch names

--- a/.github/workflows/CI_Dev.yml
+++ b/.github/workflows/CI_Dev.yml
@@ -33,8 +33,8 @@ jobs:
     - name: Check branch name
       run: |
 
-        tag_branch="$(cut -d'/' -f1 <<< steps.vars.outputs.short_ref)"
-        name_branch="$(cut -d'/' -f2 <<< steps.vars.outputs.short_ref)"
+        tag_branch="$(cut -d'/' -f1 <<< "feat/hello")"
+        name_branch="$(cut -d'/' -f2 <<< ${steps.vars.outputs.short_ref})"
 
         echo "TAG_BRANCH=$tag_branch" >> $GITHUB_ENV
         echo "NAME_BRANCH=$name_branch" >> $GITHUB_ENV
