ci: add condition

--- a/.github/workflows/CI_Dev.yml
+++ b/.github/workflows/CI_Dev.yml
@@ -37,15 +37,15 @@ jobs:
         
         echo "$tag_branch"
         echo "$name_branch"
-        echo "${{env.TAG_BRANCH}}"
-        echo "${{env.NAME_BRANCH}}"
+        echo "$env.TAG_BRANCH"
+        echo "$env.NAME_BRANCH"
 
     - name: Analysing code with flake8
       run: |
         flake8
         
     - name: Checkout Test Script
-      if: ${{ env.TAG_BRANCH == 'ci' }}
+      if: ${{ ${env.TAG_BRANCH} == 'ci' }}
       uses: actions/checkout@v2
       with:
         repository: np-devops-team1/DevOps_Dev_UnitTest
@@ -53,13 +53,13 @@ jobs:
         token: ${{ secrets.DEV_REMOTE }}
         
     - name: Build coverage file
-      if: ${{ env.TAG_BRANCH == 'feat' }}
+      if: ${{ ${env.TAG_BRANCH} == 'feat' }}
       run: |
         mv ./test_cases/test_${{env.NAME}} ./
         pytest --cache-clear --cov=app test/ > pytest-coverage.txt
         
     - name: Comment coverage
-      if: ${{ env.TAG_BRANCH == 'feat' }}
+      if: ${{ ${env.TAG_BRANCH} == 'feat' }}
       uses: coroo/pytest-coverage-commentator@v1.0.2
       with:
         pytest-coverage: pytest-coverage.txt
