ci: add condition

--- a/.github/workflows/CI_Dev.yml
+++ b/.github/workflows/CI_Dev.yml
@@ -5,9 +5,6 @@ on: [push, pull_request]
 jobs:
   build:
     runs-on: ubuntu-latest
-    env:
-      TAG_BRANCH: ' '
-      NAME_BRANCH: ' '
     steps:
     - uses: actions/setup-python@v2
       with:
@@ -32,12 +29,17 @@ jobs:
     - name: Check branch name
       run: |
 
-        $env.TAG_BRANCH:"$(cut -d'/' -f1 <<< ${GITHUB_REF#refs/heads/})"
-        $env.NAME_BRANCH:"$(cut -d'/' -f2 <<< ${GITHUB_REF#refs/heads/})"
-        echo "${GITHUB_REF}"
+        $tag_branch="$(cut -d'/' -f1 <<< ${GITHUB_REF#refs/heads/})"
+        $name_branch="$(cut -d'/' -f2 <<< ${GITHUB_REF#refs/heads/})"
         
-        echo "$env.TAG_BRANCH"
-        echo "$env.NAME_BRANCH"
+        echo "${GITHUB_REF}"
+        echo "NAME_BRANCH=$(echo $name_branch)" >> $GITHUB_ENV
+        echo "TAG_BRANCH=$(echo $tag_branch)" >> $GITHUB_ENV
+
+        echo "$tag_branch"
+        echo "$name_branch"
+        echo ${{env.TAG_BRANCH}}
+        echo ${{env.NAME_BRANCH}}
 
     - name: Analysing code with flake8
       run: |
@@ -58,7 +60,7 @@ jobs:
         pytest --cache-clear --cov=app test/ > pytest-coverage.txt
         
     - name: Comment coverage
-      if: ${{env.TAG_BRANCH == 'feat' }}
+      if: ${{ ${env.TAG_BRANCH} == 'feat' }}
       uses: coroo/pytest-coverage-commentator@v1.0.2
       with:
         pytest-coverage: pytest-coverage.txt
