--- a/.github/workflows/CI_Dev.yml
+++ b/.github/workflows/CI_Dev.yml
@@ -29,8 +29,8 @@ jobs:
     - name: Check branch name
       run: |
 
-        $tag_branch="$(cut -d'/' -f1 <<< ${GITHUB_REF#refs/heads/})"
-        $name_branch="$(cut -d'/' -f2 <<< ${GITHUB_REF#refs/heads/})"
+        tag_branch="$(cut -d'/' -f1 <<< ${GITHUB_REF#refs/heads/})"
+        name_branch="$(cut -d'/' -f2 <<< ${GITHUB_REF#refs/heads/})"
         
         echo "${GITHUB_REF}"
         echo "NAME_BRANCH=$(echo $name_branch)" >> $GITHUB_ENV
