--- a/.github/workflows/CI_Dev.yml
+++ b/.github/workflows/CI_Dev.yml
@@ -46,7 +46,7 @@ jobs:
         flake8
         
     - name: Checkout Test Script
-      if: ${{TAG_BRANCH == 'feat' }}
+      if: ${{$TAG_BRANCH == 'feat' }}
       uses: actions/checkout@v2
       with:
         repository: np-devops-team1/DevOps_Dev_UnitTest
@@ -54,13 +54,13 @@ jobs:
         token: ${{ secrets.DEV_REMOTE }}
         
     - name: Build coverage file
-      if: ${{TAG_BRANCH == 'feat' }}
+      if: ${{$TAG_BRANCH == 'feat' }}
       run: |
         mv ./test_cases/test_${{NAME}} ./
         pytest --cache-clear --cov=app test/ > pytest-coverage.txt
         
     - name: Comment coverage
-      if: ${{TAG_BRANCH == 'feat' }}
+      if: ${{$TAG_BRANCH == 'feat' }}
       uses: coroo/pytest-coverage-commentator@v1.0.2
       with:
         pytest-coverage: pytest-coverage.txt
