ci: add condition

--- a/.github/workflows/CI_Dev.yml
+++ b/.github/workflows/CI_Dev.yml
@@ -46,7 +46,7 @@ jobs:
         flake8
         
     - name: Checkout Test Script
-      if: ${{tag_branch == 'feat' }}
+      if: ${{tag_branch == 'ci' }}
       uses: actions/checkout@v2
       with:
         repository: np-devops-team1/DevOps_Dev_UnitTest
