ci: added gsheet ci

--- a/.github/workflows/CI_Dev.yml
+++ b/.github/workflows/CI_Dev.yml
@@ -6,6 +6,27 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+
+    - id: 'update_worksheet'
+      uses: jroehl/gsheet.action@v1.0.0 # you can specify '@release' to always have the latest changes
+      with:
+        spreadsheetId: $${{ secrets.GOOGLE_SHEET_ID }}
+        commands: | # list of commands, specified as a valid JSON string
+          [
+            { "command": "addWorksheet", "args": { "worksheetTitle": "<worksheetTitle>" }},
+            { "command": "updateData", "args": { "data": [["A1", "A2", "A3"]] }},
+            { "command": "getData", "args": { "range": "'<worksheetTitle>'!A2:B3" } }
+          ]
+      env:
+        GSHEET_CLIENT_EMAIL: ${{ secrets.GSHEET_CLIENT_EMAIL }}
+        GSHEET_PRIVATE_KEY: ${{ secrets.GSHEET_PRIVATE_KEY }}
+
+    - name: dump results
+      env:
+        #  the output of the action can be found in ${{ steps.update_worksheet.outputs.results }}
+        RESULTS: ${{ steps.update_worksheet.outputs.results }}
+      run: echo "$RESULTS" | jq
+
     - uses: actions/setup-python@v2
       with:
         python-version: 3.8
@@ -51,3 +72,4 @@ jobs:
       uses: coroo/pytest-coverage-commentator@v1.0.2
       with:
         pytest-coverage: pytest-coverage.txt
+
