ref: remove duplicate $

--- a/.github/workflows/CI_Dev.yml
+++ b/.github/workflows/CI_Dev.yml
@@ -10,7 +10,7 @@ jobs:
     - id: 'update_worksheet'
       uses: jroehl/gsheet.action@v1.0.0 # you can specify '@release' to always have the latest changes
       with:
-        spreadsheetId: $${{ secrets.GOOGLE_SHEET_ID }}
+        spreadsheetId: ${{ secrets.GOOGLE_SHEET_ID }}
         commands: | # list of commands, specified as a valid JSON string
           [
             { "command": "addWorksheet", "args": { "worksheetTitle": "<worksheetTitle>" }},
