--- a/.github/workflows/CI_Dev.yml
+++ b/.github/workflows/CI_Dev.yml
@@ -32,7 +32,7 @@ jobs:
 
     - name: Analysing code with flake8
       run: |
-        flake8
+        flake8 main.py
     - id: 'get_branch_id'
       run: | 
         echo "##[set-output name=branch;]$(echo $(cut -d'/' -f2 <<< ${GITHUB_REF#refs/heads/}))"
