--- a/.github/workflows/CI_Dev.yml
+++ b/.github/workflows/CI_Dev.yml
@@ -1,10 +1,6 @@
 name: CI for Dev Unit Tests
 
-on:
-  push:
-  pull_request:
-    branches:
-    - main
+on: [push, pull_request]
 
 jobs:
   build:
