--- a/.github/workflows/CI_Dev.yml
+++ b/.github/workflows/CI_Dev.yml
@@ -30,8 +30,8 @@ jobs:
 
       - name: test
         run: |
-          echo github.ref
-          echo github.head_ref
+          echo ${{ github.ref }
+          echo ${{ github.head_ref }
 
       - name: Checkout One Test Script
         if: |
