test: test CI_Dev

--- a/.github/workflows/CI_Dev.yml
+++ b/.github/workflows/CI_Dev.yml
@@ -30,7 +30,7 @@ jobs:
 
       - name: test
         run: |
-          echo ${github.head_ref}
+          echo ${{github.head_ref}}
 
       - name: Checkout One Test Script
         if: |
