--- a/.github/workflows/CI_Dev.yml
+++ b/.github/workflows/CI_Dev.yml
@@ -28,14 +28,10 @@ jobs:
         run: |
           echo "##[set-output name=branch;]$(echo $(cut -d'/' -f2 <<< ${GITHUB_REF#refs/heads/}))"
 
-      - name: test
-        run: |
-          echo ${{github.ref}}
-
       - name: Checkout One Test Script
         if: |
           startsWith(github.ref, 'refs/heads/feat/') ||
-          startsWith(github.head_ref, 'refs/heads/feat/')
+          startsWith(github.head_ref, 'feat/')
         uses: actions/checkout@v2
         with:
           repository: np-devops-team1/DevOps_Dev_UnitTest
@@ -45,7 +41,7 @@ jobs:
       - name: Checkout ALL Test Script
         if: |
           startsWith(github.ref, 'refs/heads/main') ||
-          startsWith(github.head_ref, 'refs/heads/main')
+          startsWith(github.head_ref, 'main')
         uses: actions/checkout@v2
         with:
           repository: np-devops-team1/DevOps_Dev_UnitTest
@@ -55,18 +51,18 @@ jobs:
       - name: Generate coverage report
         if: |
           startsWith(github.ref, 'refs/heads/feat/') || 
-          startsWith(github.head_ref, 'refs/heads/feat/') ||
+          startsWith(github.head_ref, 'feat/') ||
           startsWith(github.ref, 'refs/heads/main') ||
-          startsWith(github.head_ref, 'refs/heads/main')
+          startsWith(github.head_ref, 'main')
         run: |
           pytest --cov=./ --cov-report=xml test_cases/test_cases/${{steps.get_branch_id.outputs.branch}}
 
       - name: Upload coverage to Codecov
         if: |
           startsWith(github.ref, 'refs/heads/feat/') || 
-          startsWith(github.head_ref, 'refs/heads/feat/') ||
+          startsWith(github.head_ref, 'feat/') ||
           startsWith(github.ref, 'refs/heads/main') ||
-          startsWith(github.head_ref, 'refs/heads/main')
+          startsWith(github.head_ref, 'main')
         uses: codecov/codecov-action@v2
         with:
           token: 81e01a89-f6b5-4711-b224-d09162825fad
@@ -81,18 +77,18 @@ jobs:
       - name: Build coverage file
         if: |
           startsWith(github.ref, 'refs/heads/feat/') || 
-          startsWith(github.head_ref, 'refs/heads/feat/') ||
+          startsWith(github.head_ref, 'feat/') ||
           startsWith(github.ref, 'refs/heads/main') ||
-          startsWith(github.head_ref, 'refs/heads/main')
+          startsWith(github.head_ref, 'main')
         run: |
           pytest --cache-clear --cov=. ${{steps.get_branch_id.outputs.branch}}/ > pytest-coverage.txt
 
       - name: Comment coverage
         if: |
           startsWith(github.ref, 'refs/heads/feat/') || 
-          startsWith(github.head_ref, 'refs/heads/feat/') ||
+          startsWith(github.head_ref, 'feat/') ||
           startsWith(github.ref, 'refs/heads/main') ||
-          startsWith(github.head_ref, 'refs/heads/main')
+          startsWith(github.head_ref, 'main')
         uses: coroo/pytest-coverage-commentator@v1.0.2
         with:
           pytest-coverage: pytest-coverage.txt
